Fixing for java8/tomcat9